[tool.poetry]
name = "rer_wer"
version = "0.1.0"
description = "A simple pipeline for transcribing the RER audio clips and computing WER"
authors = ["fabiocat93 <fabiocat@mit.edu>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "rer_wer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
senselab = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
